--- a/front_endProject/_acesso/index.css
+++ b/front_endProject/_acesso/index.css
@@ -1,13 +1,47 @@
 /* DIV DOS ACESSOS LINKS */
 
 .acessos {
-    width: 250px;
-    height: 250px;
+    position: absolute;
+    align-items: center;
+    left: 15%;
+    width: 1000px;
+    height: 800px;
     border: 2px solid black;
+    box-shadow: inset 0 0 1em gold, 0 0 1em black;
 }
 
 /* ACESSOS LINKS */ 
 
-button {
-    position: relative;
+img 
+{
+    position: relative; 
+    width: 50px;
+}
+
+img.assistencia {
+    border: 2px solid red;
+}
+
+img.calendario {
+    border: 2px solid green;
+}
+
+img.evasao {
+    border: 2px solid yellow;
+}
+
+img.trancamento {
+    border: 2px solid blue;
+}
+
+img.cadastro {
+    border: 2px solid gray;
+}
+
+img.criacao {
+    border: 2px solid purple;
+}
+
+img.justificativa {
+    border: 2px solid black;
 }
